--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             "imports": {
                 "three": "https://unpkg.com/three@0.162.0/build/three.module.js",
                 "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three@0.162.0/examples/jsm/controls/PointerLockControls.js",
+                "three/examples/jsm/controls/OrbitControls": "https://unpkg.com/three@0.162.0/examples/jsm/controls/OrbitControls.js",
                 "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three@0.162.0/examples/jsm/loaders/GLTFLoader.js"
             }
         }
