--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,6 +56,14 @@
         Follow <a href="https://x.com/dev_clap" target="_blank">@dev_clap</a> for updates
     </div>
     <script type="module" src="src/main.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FDXB40BBSG"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-FDXB40BBSG');
+    </script>
     <a target="_blank" href="https://jam.pieter.com" style="font-family: 'system-ui', sans-serif; position: fixed; bottom: -1px; right: -1px; padding: 7px; font-size: 14px; font-weight: bold; background: #fff; color: #000; text-decoration: none; z-index: 10; border-top-left-radius: 12px; z-index: 10000; border: 1px solid #fff;">🕹️ Vibe Jam 2025</a>
 </body>
 </html> 
