--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Food Vibers">
+    <meta name="twitter:description" content="Multiplayer food fight deathmatch!">
+    <meta name="twitter:image" content="http://play.foodvibers.com/assets/images/card.png">
+    <meta name="twitter:site" content="@dev_clap"> <!-- optional -->
+    <meta name="twitter:creator" content="@dev_clap"> <!-- optional -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three.js FPS Sandbox</title>
