--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Food Vibers">
     <meta name="twitter:description" content="Multiplayer food fight deathmatch!">
-    <meta name="twitter:image" content="/images/card.png">
+    <meta name="twitter:image" content="https://foodvibers.netlify.app/images/card.png">
     <meta name="twitter:site" content="@dev_clap"> <!-- optional -->
     <meta name="twitter:creator" content="@dev_clap"> <!-- optional -->
     <meta charset="UTF-8">
