--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,8 @@
     <div id="crosshair">+</div>
     <div id="dev-info">
         🎮 Welcome to Food Vibers! <br>
-        Follow <a href="https://x.com/dev_clap" target="_blank">@dev_clap</a> for updates
+        Follow <a href="https://x.com/dev_clap" target="_blank">@dev_clap</a> for updates<br>
+        Press 'M' to mute/unmute music
     </div>
     <script type="module" src="src/main.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FDXB40BBSG"></script>
