--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Food Vibers">
     <meta name="twitter:description" content="Multiplayer food fight deathmatch!">
-    <meta name="twitter:image" content="http://play.foodvibers.com/images/card-og.png?v=2">
+    <meta name="twitter:image" content="https://foodvibers.com/images/card-og.png">
     <meta name="twitter:site" content="@dev_clap"> <!-- optional -->
     <meta name="twitter:creator" content="@dev_clap"> <!-- optional -->
     <meta charset="UTF-8">
