--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,8 @@
     <div id="dev-info">
         🎮 Welcome to Food Vibers! <br>
         Follow <a href="https://x.com/dev_clap" target="_blank">@dev_clap</a> for updates<br>
-        Press 'M' to mute/unmute music
+        Press 'M' to mute/unmute music<br>
+        Press 'N' to mute/unmute sound effects
     </div>
     <script type="module" src="src/main.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FDXB40BBSG"></script>
