--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,14 @@
     <meta name="twitter:image" content="https://foodvibers.com/images/cover.png">
     <meta name="twitter:site" content="@dev_clap"> <!-- optional -->
     <meta name="twitter:creator" content="@dev_clap"> <!-- optional -->
+    
+    <!-- Open Graph tags to improve card rendering -->
+    <meta property="og:title" content="Food Vibers">
+    <meta property="og:description" content="Multiplayer food fight deathmatch!">
+    <meta property="og:image" content="https://foodvibers.com/images/cover.png">
+    <meta property="og:url" content="https://foodvibers.com">
+    <meta property="og:type" content="website">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Vibers</title>
