--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,14 +4,14 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Food Vibers">
     <meta name="twitter:description" content="Multiplayer food fight deathmatch!">
-    <meta name="twitter:image" content="https://foodvibers.com/images/cover.png">
+    <meta name="twitter:image" content="https://foodvibers.com/images/cover.png?v=1)">
     <meta name="twitter:site" content="@dev_clap"> <!-- optional -->
     <meta name="twitter:creator" content="@dev_clap"> <!-- optional -->
     
     <!-- Open Graph tags to improve card rendering -->
     <meta property="og:title" content="Food Vibers">
     <meta property="og:description" content="Multiplayer food fight deathmatch!">
-    <meta property="og:image" content="https://foodvibers.com/images/cover.png">
+    <meta property="og:image" content="https://foodvibers.com/images/cover.png?v=1)">
     <meta property="og:url" content="https://foodvibers.com">
     <meta property="og:type" content="website">
     
